--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,29 +1,23 @@
 *{
 	margin: 0;
 	padding: 0;
+	background-color: blue;
 }
 
 .container{
-	background-color: red;
-	top: 0;
-	position: absolute;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 	width: 100%;
-	height: 100vh;
-}
-.row-group{
-	position: absolute;
-	bottom: 0;
-}
-.row{
-	display: block;
+	height: 97vh;
 }
 .column{
-	border:none;
-	padding: 2em 3em;
+	border: 0;
 	background-color: black;
 	color: white;
-	margin-top: 2px;
+	padding: 1em 3em;
 }
 .column:hover{
-	filter: brightness(0.4);
+	background-color: red;
 }
