--- a/Desktop/src/style.css
+++ b/Desktop/src/style.css
@@ -3,60 +3,62 @@
   padding: 0;
   box-sizing: border-box;
 }
-.container {
+.container{
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: 100vw;
   height: 100vh;
+  border: 2px solid red;
 }
 
-.container > .child-container {
-  border: 4px solid gray;
-  border-radius: 30px 30px 30px 30px;
-}
-
-.container > .child-container > #enviar > p {
-  width: 100%;
-  text-align: center;
-  border-radius: 0 0 25px 25px;
-}
-
-#screen {
-  height: 30vh;
-  background-color: black;
-  color: white;
-  position: relative;
-  border-radius: 25px 25px 0 0;
-  border-bottom: 4px solid gray;
-}
-
-.container > .child-container > div {
+.teste{
   display: flex;
   flex-direction: row;
+  width: 50vw;
 }
 
-.container .child-container > div > p,
-.container > .child-container > div > #screen {
+.child-container{
+  border-radius: 25px 25px 0 0; 
+}
+
+#screen{
+  height: 40vh;
+  position: relative;
   background-color: black;
+  border-radius: inherit;
   color: white;
-  padding: 12px 30px;
-  text-decoration: none;
-  cursor: pointer;
 }
 
-.container > .child-container > div > #screen {
-  height: 200px;
-}
-
-#answer {
+#screen div{
   position: absolute;
   bottom: 0;
   right: 0;
-  margin-right: 0.8em;
+  padding: 14px;
 }
 
-.container .child-container p:hover{
-  background-color: blue;
+p{
+  background-color: red;
+  padding: 20px 12px;
+  width: 100%;
+  text-align: center;
+}
+
+p:hover{
+  filter: brightness(0.8);
+  cursor: pointer;
+}
+
+#send{
+  border-radius: 0 0 25px 25px;
+}
+
+#send p{
+  border-radius: inherit;
+}
+
+@media screen and (max-width: 200px) {
+  .teste {
+    width: 120px;
+  }
 }
