--- a/Desktop/src/style.css
+++ b/Desktop/src/style.css
@@ -3,6 +3,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+body{
+  overflow: hidden;
+}
 .container{
   display: flex;
   justify-content: center;
@@ -10,12 +13,13 @@
   width: 100vw;
   height: 100vh;
   border: 2px solid red;
+  
 }
 
 .teste{
   display: flex;
   flex-direction: row;
-  width: 50vw;
+  width: 70vw;
 }
 
 .child-container{
@@ -44,6 +48,7 @@ p{
   width: 100%;
   text-align: center;
   border: none;
+
 }
 
 p:hover{
@@ -55,7 +60,6 @@ p:hover{
   border: 4px solid purple;
   border-radius: 0 0 25px 25px;
   overflow: hidden;
-
 }
 
 #send{
