--- a/Desktop/src/style.css
+++ b/Desktop/src/style.css
@@ -26,15 +26,17 @@ body{
 }
 
 .child-container{
-  border: none;
+  border-radius: 25px;
+  border: 6px solid purple;
+  overflow: hidden;
+  box-shadow: 5px 5px 15px gray;
 }
 
 #screen{
   height: 40vh;
   position: relative;
   background-color: black;
-  border: 6px solid purple;
-  border-radius: 25px 25px 0 0;
+  
   color: white;
 }
 
@@ -57,22 +59,6 @@ p{
 p:hover{
   filter: brightness(0.8);
   cursor: pointer;
-}
-
-#buttons{
-  border: 4px solid purple;
-  border-radius: 0 0 25px 25px;
-  overflow: hidden;
-}
-
-#send{
-  border: none;
-
-  border-radius: inherit;
-}
-
-#send p{
-  border: none;
 }
 
 @media screen and (max-width: 200px) {
